<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">
<!-- layout representing UI of a weather app-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF">

        <androidx.appcompat.widget.SearchView
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toStartOf="@+id/place_name"
            app:layout_constraintTop_toTopOf="parent"
            android:queryHint="@string/search_for_a_place"
            android:editTextColor="@color/black"
            android:textSize = "14sp"/>

    <!-- text view representing city name -->
        <TextView
            android:id="@+id/place_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="168dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="168dp"
            android:layout_marginBottom="680dp"
            android:fontFamily="@font/vampiro_one"
            android:text="@string/place_name"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    <!-- text view representing temperature -->
        <TextView
            android:id="@+id/temperature_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="176dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="176dp"
            android:autofillHints="0"
            android:fontFamily="casual"
            android:inputType="number"
            android:text="@string/temperature"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/place_name" />
    <!-- text view representing weather condition-->
        <TextView
            android:id="@+id/weather_condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="176dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="176dp"
            android:fontFamily="@font/vampiro_one"
            android:text="@string/condition"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/temperature_value" />
    <!-- text view representing maximum temperature-->
        <TextView
            android:id="@+id/max_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="136dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="561dp"
            android:fontFamily="@font/acme"
            android:text="@string/h_high_temp"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/min_temp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weather_condition"
            app:layout_constraintVertical_bias="0.0" />
        <!-- text view representing minimum temperature-->
        <TextView
            android:id="@+id/min_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="136dp"
            android:fontFamily="@font/acme"
            android:text="@string/l_low_temp"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/max_temp"
            app:layout_constraintTop_toBottomOf="@+id/weather_condition" />

        <!-- cardview representing air quality index -->
        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_air_quality"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="248dp"
            android:layout_marginEnd="20dp"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="90dp"
                android:layout_gravity="top|start"
                android:layout_marginStart="180dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/aqi"
                app:srcCompat="@drawable/air_quality" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="172dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="12dp"
                android:layout_marginTop="4dp"
                android:paddingTop="4dp"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:text="@string/air_quality" />

            <TextView
                android:id="@+id/aqi_value"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="8dp"
                android:text="@string/aqi_description"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/range"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="130dp"
                android:progress="50"
                android:valueFrom="0.0"
                android:valueTo="100.0" />

        </androidx.cardview.widget.CardView>

        <!-- cardview representing sunrise time -->
        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_sunrise"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="210dp"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_view_air_quality">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                app:srcCompat="@drawable/sunrise"/>

            <TextView
                android:id="@+id/sunrise"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="4dp"
                android:textSize="28sp"
                android:textColor="@color/black"
                android:text="@string/sunrise"/>

            <TextView
                android:id="@+id/sunrise_time"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="50dp"
                android:text="@string/sunrise_time"
                android:textColor="@color/black"
                android:textSize="22sp" />

        </androidx.cardview.widget.CardView>

        <!-- cardview representing sunset time -->
        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_sunset"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginStart="210dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_view_air_quality">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:srcCompat="@drawable/sunset"
                android:layout_marginTop="4dp"
                android:layout_marginStart="4dp"/>

            <TextView
                android:id="@+id/sunset"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="4dp"
                android:textSize="28sp"
                android:textColor="@color/black"
                android:text="@string/sunset" />

            <TextView
                android:id="@+id/sunset_time"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="50dp"
                android:text="@string/sunset_time"
                android:textSize="22sp"
                android:textColor="@color/black"/>

        </androidx.cardview.widget.CardView>

        <!-- cardview representing wind speed and direction -->
        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_wind"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="210dp"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_view_sunrise">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                app:srcCompat="@drawable/wind"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:text="@string/wind"
                android:layout_marginTop="4dp"
                android:layout_marginStart="60dp"
                android:textSize="28sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/wind_speed"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="44dp"
                android:textSize="16sp"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:text="@string/wind_attributes" />

            <TextView
                android:id="@+id/wind_direction"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="66dp"
                android:textSize="16sp"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:text="@string/wind_direction" />

        </androidx.cardview.widget.CardView>

        <!-- cardview representing clouds density  -->
        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_cloudiness"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginStart="210dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_view_sunset">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:srcCompat="@drawable/cloudiness"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/cloudiness"
                android:layout_marginStart="60dp"
                android:layout_marginTop="4dp"
                android:textColor="@color/black"
                android:textSize="28sp"/>

            <TextView
                android:id="@+id/cloudiness"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="50dp"
                android:text="@string/cloudiness_value"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:layout_marginStart="10dp" />


        </androidx.cardview.widget.CardView>

        <!-- cardview representing humidity -->
        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_humidity"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="210dp"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_view_wind">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginTop="4dp"
                android:layout_marginStart="8dp"
                app:srcCompat="@drawable/humidity"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginTop="4dp"
                android:layout_marginStart="56dp"
                android:text="@string/humidity"
                android:textColor="@color/black"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/humidity_value"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="50dp"
                android:layout_marginStart="10dp"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:text="@string/humidity_description"/>

        </androidx.cardview.widget.CardView>

        <!-- cardview representing visibility -->
        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_visibility"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginStart="210dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_view_cloudiness">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginTop="4dp"
                android:layout_marginStart="8dp"
                app:srcCompat="@drawable/visibility"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginTop="4dp"
                android:layout_marginStart="56dp"
                android:text="@string/visibility"
                android:textColor="@color/black"
                android:textSize="28sp"/>

            <TextView
                android:id="@+id/visibility"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="50dp"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:text="@string/visibility_value" />

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>

